apps/qtorrent/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qtorrent
  namespace: media
  labels:
    app: qtorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qtorrent
  template:
    metadata:
      labels:
        app: qtorrent
      annotations:
        diun.enable: "true"
    spec:
      volumes:
        - name: qtorrent-config
          persistentVolumeClaim:
            claimName: qtorrent-config
        - name: downloads
          persistentVolumeClaim:
            claimName: download
      containers:
        - name: qtorrent
          image: ghcr.io/hotio/qbittorrent:release-5.1.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: qtorrent-config
              mountPath: /config
            - name: downloads
              mountPath: /data
      nodeSelector:
          pvpn: "true"
          workload: general
      tolerations:
          - key: "network"
            operator: "Equal"
            value: "pvpn"
            effect: "NoSchedule"
