apps/qtorrent/service.yml
apiVersion: v1
kind: Service
metadata:
  name: qtorrent-service
  namespace: media
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: qtorrent
  type: ClusterIP
