apps/qtorrent/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: qtorrent
  namespace: media
spec:
  rules:
  - host: qtorrent.kube.home
    http:
      paths:
      - backend:
          service:
            name: qtorrent-service
            port:
              number: 8080
        path: /
        pathType: Prefix
